src/test/ui/issue-32119.stderr
error: compilation successful
  --> $DIR/issue-32119.rs:29:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

